-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.12.1
-
None
-
-
02c25f334da817fe206aa28ba0e045c57d8c0359 (qt/qtbase/5.12)
There was a qBound check added to the QHeaderViewPrivate::setDefaultSectionSize method with the commit faff43348bfae5cfc709fabe9d2698fc3063c050. This causes problems, that were partially described in the QTBUG-69431. In short: if you call setDefaultSectionSize with a value, that is less than current minimumSectionSize, the size would be set to the current minimum. That is not much of a problem, as you can fix that by proper sequence of setting minimum and default sizes.
Now the real problem arises, when you try to configure a table in ui file, by setting minimum and default sizes to one of its headers. The generated ui_*.h file will put setDefaultSectionSize call before setMinimumSectionSize, and the former request doesn't set the desired value. As a result, generated table does not reflect its settings.
Attached project recreates this issue.
- relates to
-
QTBUG-75209 QTableWidget verticalHeaderDefaultSectionSize resized on load
-
- Closed
-