Resize grid square due to change in Qt 5.12

Grid square was not resized any more, probably due to checks against Qtableview
headers minimum size added in Qt 5.12 (see QTBUG-74352). Minimum square size is
now set to 4 before changing the default size.